# Food-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/endpoints/: auth.py  recipes.py
app/core/: config.py  security.py
app/db/: base.py
app/models/: recipe.py  user.py
app/schemas/: recipe.py  token.py  user.py
app/services/: recipe.py  user.py
frontend/: app.py
